Imported from http://ftp.icm.edu.pl/pub/unix/graphics/jpeg/jpegsrc.v6.tar.gz

--- a/makefile.vms
+++ b/makefile.vms
@@ -17,9 +17,12 @@ $ EndIf
 $ 
 $ DoCompile := CC /NoDebug /Optimize
 $!
-$ DoCompile jcapi.c
+$ DoCompile jcapimin.c
+$ DoCompile jcapistd.c
+$ DoCompile jctrans.c
 $ DoCompile jcparam.c
 $ DoCompile jdatadst.c
+$ DoCompile jcinit.c
 $ DoCompile jcmaster.c
 $ DoCompile jcmarker.c
 $ DoCompile jcmainct.c
@@ -28,14 +31,20 @@ $ DoCompile jccoefct.c
 $ DoCompile jccolor.c
 $ DoCompile jcsample.c
 $ DoCompile jchuff.c
+$ DoCompile jcphuff.c
 $ DoCompile jcdctmgr.c
 $ DoCompile jfdctfst.c
 $ DoCompile jfdctflt.c
 $ DoCompile jfdctint.c
-$ DoCompile jdapi.c
+$ DoCompile jdapimin.c
+$ DoCompile jdapistd.c
+$ DoCompile jdtrans.c
 $ DoCompile jdatasrc.c
 $ DoCompile jdmaster.c
+$ DoCompile jdinput.c
 $ DoCompile jdmarker.c
+$ DoCompile jdhuff.c
+$ DoCompile jdphuff.c
 $ DoCompile jdmainct.c
 $ DoCompile jdcoefct.c
 $ DoCompile jdpostct.c
@@ -44,7 +53,6 @@ $ DoCompile jidctfst.c
 $ DoCompile jidctflt.c
 $ DoCompile jidctint.c
 $ DoCompile jidctred.c
-$ DoCompile jdhuff.c
 $ DoCompile jdsample.c
 $ DoCompile jdcolor.c
 $ DoCompile jquant1.c
@@ -56,14 +64,16 @@ $ DoCompile jerror.c
 $ DoCompile jmemmgr.c
 $ DoCompile jmemnobs.c
 $!
-$ Library /Create libjpeg.olb  jcapi.obj,jcparam.obj,jdatadst.obj, -
-          jcmaster.obj,jcmarker.obj,jcmainct.obj,jcprepct.obj,jccoefct.obj, -
-          jccolor.obj,jcsample.obj,jchuff.obj,jcdctmgr.obj,jfdctfst.obj, -
-          jfdctflt.obj,jfdctint.obj,jdapi.obj,jdatasrc.obj,jdmaster.obj, -
-          jdmarker.obj,jdmainct.obj,jdcoefct.obj,jdpostct.obj,jddctmgr.obj, -
-          jidctfst.obj,jidctflt.obj,jidctint.obj,jidctred.obj,jdhuff.obj, -
-          jdsample.obj,jdcolor.obj,jquant1.obj,jquant2.obj,jdmerge.obj, -
-          jcomapi.obj,jutils.obj,jerror.obj,jmemmgr.obj,jmemnobs.obj
+$ Library /Create libjpeg.olb  jcapimin.obj,jcapistd.obj,jctrans.obj, -
+          jcparam.obj,jdatadst.obj,jcinit.obj,jcmaster.obj,jcmarker.obj, -
+          jcmainct.obj,jcprepct.obj,jccoefct.obj,jccolor.obj,jcsample.obj, -
+          jchuff.obj,jcphuff.obj,jcdctmgr.obj,jfdctfst.obj,jfdctflt.obj, -
+          jfdctint.obj,jdapimin.obj,jdapistd.obj,jdtrans.obj,jdatasrc.obj, -
+          jdmaster.obj,jdinput.obj,jdmarker.obj,jdhuff.obj,jdphuff.obj, -
+          jdmainct.obj,jdcoefct.obj,jdpostct.obj,jddctmgr.obj,jidctfst.obj, -
+          jidctflt.obj,jidctint.obj,jidctred.obj,jdsample.obj,jdcolor.obj, -
+          jquant1.obj,jquant2.obj,jdmerge.obj,jcomapi.obj,jutils.obj, -
+          jerror.obj,jmemmgr.obj,jmemnobs.obj
 $!
 $ DoCompile cjpeg.c
 $ DoCompile rdppm.c
@@ -71,9 +81,11 @@ $ DoCompile rdgif.c
 $ DoCompile rdtarga.c
 $ DoCompile rdrle.c
 $ DoCompile rdbmp.c
+$ DoCompile rdswitch.c
+$ DoCompile cdjpeg.c
 $!
 $ Link /Executable = cjpeg.exe  cjpeg.obj,rdppm.obj,rdgif.obj,rdtarga.obj, -
-          rdrle.obj,rdbmp.obj,libjpeg.olb/Library'OPT'
+          rdrle.obj,rdbmp.obj,rdswitch.obj,cdjpeg.obj,libjpeg.olb/Library'OPT'
 $!
 $ DoCompile djpeg.c
 $ DoCompile wrppm.c
@@ -82,9 +94,16 @@ $ DoCompile wrtarga.c
 $ DoCompile wrrle.c
 $ DoCompile wrbmp.c
 $ DoCompile rdcolmap.c
+$ DoCompile cdjpeg.c
 $!
 $ Link /Executable = djpeg.exe  djpeg.obj,wrppm.obj,wrgif.obj,wrtarga.obj, -
-          wrrle.obj,wrbmp.obj,rdcolmap.obj,libjpeg.olb/Library'OPT'
+          wrrle.obj,wrbmp.obj,rdcolmap.obj,cdjpeg.obj,libjpeg.olb/Library'OPT'
+$!
+$ DoCompile jpegtran.c
+$ DoCompile rdswitch.c
+$ DoCompile cdjpeg.c
+$!
+$ Link /Executable = jpegtran.exe  jpegtran.obj,rdswitch.obj,cdjpeg.obj,libjpeg.olb/Library'OPT'
 $!
 $ DoCompile rdjpgcom.c
 $ Link /Executable = rdjpgcom.exe  rdjpgcom.obj'OPT'
@@ -97,8 +116,14 @@ $!
 $ mcr sys$disk:[]djpeg -dct int -ppm -outfile testout.ppm testorig.jpg
 $ mcr sys$disk:[]djpeg -dct int -gif -outfile testout.gif testorig.jpg
 $ mcr sys$disk:[]cjpeg -dct int      -outfile testout.jpg testimg.ppm
+$ mcr sys$disk:[]djpeg -dct int -ppm -outfile testoutp.ppm testprog.jpg
+$ mcr sys$disk:[]cjpeg -dct int -progressive -opt -outfile testoutp.jpg testimg.ppm
+$ mcr sys$disk:[]jpegtran -outfile testoutt.jpg testprog.jpg
 $ Backup /Compare/Log testimg.ppm testout.ppm
 $ Backup /Compare/Log testimg.gif testout.gif
 $ Backup /Compare/Log testimg.jpg testout.jpg
+$ Backup /Compare/Log testimg.ppm testoutp.ppm
+$ Backup /Compare/Log testimgp.jpg testoutp.jpg
+$ Backup /Compare/Log testorig.jpg testoutt.jpg
 $!
 $ Exit
